# PrimeMind

./: .gitignore  README.md  package.json
.github/workflows/: build-android.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  spectral.rs
