[package]
name = "prime-mind"
version = "0.1.0"
description = "PrimeMind — محرك الاستدلال الطيفي"
authors = ["PrimeMind"]
edition = "2021"
rust-version = "1.77"

# مطلوب لـ Tauri: تعريف المكتبة و الثنائي معاً لدعم Android
[lib]
name = "prime_mind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "prime-mind"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# إطار Tauri v2
tauri = { version = "2.2", features = [] }

# إضافة Shell لـ Tauri
tauri-plugin-shell = "2.2"

# تسلسل/إلغاء تسلسل البيانات
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# ميزة البروتوكول المخصص للإنتاج — لا تحذفها
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# تقليص حجم الثنائي للجوال
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
